# controllers/commentsControllers.js
@@ -8,6 +8,9 @@ const commentsController = {};
 * Function to get a list of all comments from the database.
 *********************************************************/
 commentsController.getAllComments = async function (req, res) {
+    //#swagger.tags = ['Comment Management']
+    //#swagger.description = ['This is to get all comments from the database.']
+
     try {
         const comments = await Comment.find({});
         return res.json(comments);
@@ -21,6 +24,9 @@ commentsController.getAllComments = async function (req, res) {
  * Function to get a comment in the database by object _id.
  * *******************************************************/
 commentsController.getCommentById = async function (req, res) {
+    //#swagger.tags = ['Comment Management']
+    //#swagger.description = ['This is to get a single comment by id from the database.']
+
     try {
         const commentId = req.params.id;
         const comment = await Comment.findOne({ _id: commentId });
@@ -40,6 +46,9 @@ commentsController.getCommentById = async function (req, res) {
  * Function to get all comments from a single user.
  * *******************************************************/
 commentsController.getCommentsByUser = async function (req, res) {
+    //#swagger.tags = ['Comment Management']
+    //#swagger.description = ['This is to get all comments by a specific user from the database.']
+
     try {
         const githubUserId = req.params.id;
         const userComment = await Comment.find({ githubUserId: githubUserId});
@@ -59,6 +68,9 @@ commentsController.getCommentsByUser = async function (req, res) {
  * Function to get all comments on a specific task.
  * *******************************************************/
 commentsController.getCommentsByTask = async function (req, res) {
+    //#swagger.tags = ['Comment Management']
+    //#swagger.description = ['This is to get all comments on a specific task from the database.']
+
     try {
         const taskId = req.params.id;
         const comments = await Comment.find({ taskId: taskId });
@@ -78,9 +90,12 @@ commentsController.getCommentsByTask = async function (req, res) {
  * Function to create a new comment in the database.
  * *******************************************************/
 commentsController.createComment = async function (req, res) {
+    //#swagger.tags = ['Comment Management']
+    //#swagger.description = ['This is to create a new comment in the database.']
+
     try {
-        const { comment, taskId, userId } = req.body;
-        const newComment = new Comment({ comment, taskId, userId });
+        const { comment, taskId, githubUserId } = req.body;
+        const newComment = new Comment({ comment, taskId, githubUserId });
         await newComment.save();
         res.status(201).json(newComment);
     } catch (error) {
@@ -93,10 +108,13 @@ commentsController.createComment = async function (req, res) {
  * Function to update a comment in the database.
  * *******************************************************/
 commentsController.updateComment = async function (req, res) {
+    //#swagger.tags = ['Comment Management']
+    //#swagger.description = ['This is to update a comment by _id in the database.']
+
     try {
         const commentId = req.params.id;
-        const { comment, taskId, userId } = req.body;
-        const updatedComment = await Comment.findOneAndUpdate({ _id: commentId }, { comment, taskId, userId }, { new: true });
+        const { comment, taskId, githubUserId } = req.body;
+        const updatedComment = await Comment.findOneAndUpdate({ _id: commentId }, { comment, taskId, githubUserId }, { new: true });
         res.json(updatedComment);
     } catch (error) {
         console.error("Error updating comment:", error);
@@ -108,9 +126,12 @@ commentsController.updateComment = async function (req, res) {
  * Function to delete a comment from the database.
  * *******************************************************/
 commentsController.deleteComment = async function (req, res) {
+    //#swagger.tags = ['Comment Management']
+    //#swagger.description = ['This is to delete a comment by _id from the database.']
+
     try {
         const commentId = req.params.id;
-        await Comment.deleteOne({commentId});
+        await Comment.deleteOne({_id: commentId});
         res.json({ message: "Comment deleted successfully." });
     }
     catch (error) {
