# models/commentsModels.js
@@ -6,7 +6,7 @@ const mongoose = require("mongoose");
 const commentSchema = new mongoose.Schema({
     comment: { type: String, required: true },
     taskId: { type: String, required: true },
-    userId: { type: String, required: true },
+    githubUserId: { type: String, required: true },
     date: { type: Date, default: Date.now },
 });
 
